# strava-mcp-server

./: .gitignore  Dockerfile  README.md  app.py  mcp_client.py  mcp_server.py  pyproject.toml  test_tools.py
.github/workflows/: ci.yml
scripts/: get_tokens.py
src/strava_mcp_server/: __init__.py  __main__.py  main.py  strava_client.py  tools.py
tests/: test_integration.py  test_tools.py
