[project]
name = "strava-mcp-server"
version = "0.1.0"
description = "A server to connect to Strava and get activities and performance data."
authors = [{ name = "rousseya" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "stravalib",
    "mcp",
    "python-dotenv",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
strava-mcp-server = "strava_mcp_server.main:mcp.run"

[project.urls]
"Homepage" = "https://github.com/rousseya/strava-mcp-server"
"Bug Tracker" = "https://github.com/rousseya/strava-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_mcp_server"]

[tool.uv]
dev-dependencies = [
    "ruff",
]
